--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=8080
 
-# MONGO_URL = mongodb+srv://savitam247:savitam247@cluster1.x1xfa4l.mongodb.net/food-app;
+# MONGO_URL = ;
 
-MONGO_URL = mongodb+srv://savitam247:savitam247@cluster1.x1xfa4l.mongodb.net/food-app; 
+MONGO_URL = ; 
 JWT_SECRET = mysecretvalue;
